# QT-Fitness-application

QT_app/: CMakeLists.txt  bmi_calculator.cpp  bmi_calculator.h  bmi_calculator.ui  bmr_calculator.cpp  bmr_calculator.h  bmr_calculator.ui  cameracapture.cpp  cameracapture.h  database_application.cpp  database_application.h  foodorganizer.cpp  foodorganizer.h  foodorganizer.ui  home.cpp  home.h  home.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register.cpp  register.h  register.ui  videocapture.cpp  videocapture.h  videocapture.ui
QT_app/Interfaces/: Register_interface.h  login_interface.h  register_interface.cpp
build-QT_app-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-QT_app-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-f010e92801acfc4aae40.json  cmakeFiles-v1-708a8d0db54ba3516b3a.json  codemodel-v2-9394660ff2885641c61c.json  directory-.-Debug-5b3c5158901671591c23.json  index-2023-05-27T20-08-13-0633.json  target-QT_app-Debug-3037f81ec2ce3773b166.json  target-QT_app_autogen-Debug-a23b97d686c7b432f05c.json  target-QT_app_autogen_timestamp_deps-Debug-3b3808b9db59525ca8e7.json
build-QT_app-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
